k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-list-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
spec:
  type: ClusterIP
  selector:
    app: todo-list-app
  ports:
  - port: 80
    targetPort: 3000
